@@ -1,19 +1,13 @@
 package security.orderpick.util;
 
-import java.security.InvalidAlgorithmParameterException;
-import java.security.InvalidKeyException;
-import java.security.NoSuchAlgorithmException;
 import java.security.spec.AlgorithmParameterSpec;
-import java.security.spec.InvalidKeySpecException;
-import java.security.spec.KeySpec;
 
 import javax.crypto.Cipher;
-import javax.crypto.NoSuchPaddingException;
 import javax.crypto.SecretKey;
-import javax.crypto.SecretKeyFactory;
-import javax.crypto.spec.PBEKeySpec;
-import javax.crypto.spec.PBEParameterSpec;
+import javax.crypto.spec.IvParameterSpec;
+import javax.crypto.spec.SecretKeySpec;
 
+import org.apache.commons.codec.binary.Base64;
 import org.springframework.stereotype.Component;
 
 @Component(Encrypt.name)
@@ -21,98 +15,31 @@ public class Encrypt {
 
 	public static final String name = "encrypt";
 
-	Cipher ecipher;
+	SecretKey key = new SecretKeySpec(
+	    Base64.decodeBase64("u/Gu5posvwDsXUnV5Zaq4g=="), "AES");
+	AlgorithmParameterSpec iv = new IvParameterSpec(
+	    Base64.decodeBase64("5D9r9ZVzEYYgha93/aUK2w=="));
 
-	Cipher dcipher;
-
-	/**
-	 * Constructor used to create this object. Responsible for setting and initializing this
-	 * object's encrypter and decrypter Chipher instances given a Pass Phrase and algorithm.
-	 * 
-	 * @param passPhrase Pass Phrase used to initialize both the encrypter and decrypter instances.
-	 */
 	public Encrypt() {
 
-		// 8-bytes Salt
-		byte[] salt = { (byte) 0xA9, (byte) 0x9B, (byte) 0xC8, (byte) 0x32, (byte) 0x56, (byte) 0x34, (byte) 0xE3,
-				(byte) 0x03 };
-		String passPhrase = "OrderIGE83";
-		// Iteration count
-		int iterationCount = 19;
-
-		try {
-
-			KeySpec keySpec = new PBEKeySpec(passPhrase.toCharArray(), salt, iterationCount);
-			SecretKey key = SecretKeyFactory.getInstance("PBEWithMD5AndDES").generateSecret(keySpec);
-
-			ecipher = Cipher.getInstance(key.getAlgorithm());
-			dcipher = Cipher.getInstance(key.getAlgorithm());
-
-			// Prepare the parameters to the cipthers
-			AlgorithmParameterSpec paramSpec = new PBEParameterSpec(salt, iterationCount);
-
-			ecipher.init(Cipher.ENCRYPT_MODE, key, paramSpec);
-			dcipher.init(Cipher.DECRYPT_MODE, key, paramSpec);
-
-		} catch (InvalidAlgorithmParameterException e) {
-			System.out.println("EXCEPTION: InvalidAlgorithmParameterException");
-		} catch (InvalidKeySpecException e) {
-			System.out.println("EXCEPTION: InvalidKeySpecException");
-		} catch (NoSuchPaddingException e) {
-			System.out.println("EXCEPTION: NoSuchPaddingException");
-		} catch (NoSuchAlgorithmException e) {
-			System.out.println("EXCEPTION: NoSuchAlgorithmException");
-		} catch (InvalidKeyException e) {
-			System.out.println("EXCEPTION: InvalidKeyException");
-		}
 	}
 
-	/**
-	 * Takes a single String as an argument and returns an Encrypted version of that String.
-	 * 
-	 * @param str String to be encrypted
-	 * @return <code>String</code> Encrypted version of the provided String
-	 * @throws Exception
-	 */
-	public String encrypt(String str) throws Exception {
-		try {
-			// Encode the string into bytes using utf-8
-			byte[] utf8 = str.getBytes("UTF8");
-
-			// Encrypt
-			byte[] enc = ecipher.doFinal(utf8);
-
-			// Encode bytes to base64 to get a string
-			return new sun.misc.BASE64Encoder().encode(enc);
-
-		} catch (Exception e) {
-			throw new Exception("Problem encrypting");
-		}
+	public String encrypt(String plain) throws Exception {
+		
+		Cipher cipher;
+		cipher = Cipher.getInstance("AES/CBC/PKCS5Padding");
+		cipher.init(Cipher.ENCRYPT_MODE, key, iv);
+		return Base64.encodeBase64String(cipher.doFinal(
+			    plain.getBytes("UTF-8")));
 	}
 
-	/**
-	 * Takes a encrypted String as an argument, decrypts and returns the decrypted String.
-	 * 
-	 * @param str Encrypted String to be decrypted
-	 * @return <code>String</code> Decrypted version of the provided String
-	 * @throws Exception
-	 */
-	public String decrypt(String str) throws Exception {
-
-		try {
-
-			// Decode base64 to get bytes
-			byte[] dec = new sun.misc.BASE64Decoder().decodeBuffer(str);
-
-			// Decrypt
-			byte[] utf8 = dcipher.doFinal(dec);
-
-			// Decode using utf-8
-			return new String(utf8, "UTF8");
-
-		} catch (Exception e) {
-			throw new Exception("Problem encrypting");
-		}
+	public String decrypt(String encrypted) throws Exception {
+		Cipher cipher;
+		cipher = Cipher.getInstance("AES/CBC/PKCS5Padding");
+		cipher.init(Cipher.DECRYPT_MODE, key, iv);
+		byte[] decodedValue = new Base64().decode(encrypted);
+        byte[] decValue = cipher.doFinal(decodedValue);
+        String decryptedValue = new String(decValue);
+        return decryptedValue;
 	}
-
 }
